actualización de background

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -25,6 +25,29 @@
   }
 
 
+  body{
+    position: relative;
+    width: 100%;
+    height: auto;
+  }
+  
+  body::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url('../img/FondoDePagina.jpg');
+    background-size: 30vw;
+    background-repeat: repeat;
+    opacity: 0.5;
+    z-index: -2;
+  }
+
+
+  /* div atras header */
+
   .space-top {
     position: relative;
     height: 15vw;
@@ -35,20 +58,6 @@
     top: 4.6vw;
     height: 12vw;
     z-index: 3;
-  }
-  
-  .space-top::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url('/img/fondo-multi.jpg');
-    background-repeat: repeat;
-    background-size: 11vw;
-    opacity: 0.5;
-    z-index: -1;
   }
   
   /* MEDIA QUERY SPACE TOP */
@@ -63,9 +72,6 @@
         height: 15vw;
     }
   
-    .space-top::before {
-        background-size: 25vw;
-    }
   }
   
   @media (max-width: 768px) {
@@ -78,9 +84,6 @@
         height: 15vw;
     }
   
-    .space-top::before {
-        background-size: 25vw;
-    }
   }
   
   @media (max-width: 480px) {
@@ -93,21 +96,12 @@
         height: 16vw;
     }
   
-    .space-top::before {
-        background-size: 25vw;
-    }
   }
-
 /* -------------- */
 
 *{
     margin: 0;
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-}
-
-main{
-    background-image: url(../img/FondoDePagina.jpg);
-    background-size: 50%;
 }
 
 
