--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,7 @@ footer {
     width: 100%;
     height: 28.99vw;
     background-size: cover;
+    background-position: center;
     background-image: url(../img/footer/nuevo-footer.jpg);
     background-repeat: no-repeat;
 }
