--- a/css/index.css
+++ b/css/index.css
@@ -717,6 +717,7 @@ h1 {
   background-image: url(/img/pre-footer.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   width: 100%;
   height: 29vw;
 }
