--- a/css/header.css
+++ b/css/header.css
@@ -48,7 +48,7 @@ header {
     flex-direction: column;
     border: none;
     outline: none;
-    background-color:rgba(255, 154, 129, 0.9);
+    background-color:rgba(230,155,115,0.80);
 }
 
 .no-border>img{
@@ -61,7 +61,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgba(255, 175, 155, .9);
+    background-color: rgba(230,155,115,0.80);
     z-index: 2;
 }
 
@@ -93,7 +93,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    background-color: #eeff00;
+    background-color: rgba(18,144,114,0.7);
 }
    
 /* PUNTOS DE RUPTURA */
