--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ body::before{
 .wp-block-cover__content>h1 {
   display: flex;
   align-items: center;
-  color: rgb(247, 162, 242);
+  color: rgba(163,240,231,0.80);
   font-family: "titulos";
   text-align: center; 
   font-size: 2.5vw;
@@ -148,7 +148,6 @@ body::before{
 .wp-block-cover__content>h4,
 h1 {
   margin: 0vh;
-  /* padding: 2vh 2vw 2vh 2vw; */
 }
 
 .wp-block-cover__content>h4 {
@@ -162,7 +161,7 @@ h1 {
   text-align: center;
   font-family: "snig";
   font-size: 1.8vw;
-  color: rgb(247, 162, 242);
+  color: rgba(221,120,153);
   border: outset 0.1vw grey;
   border-radius: 1vw 1vw 1vw 1vw;
   background-color: rgba(0, 0, 0, 0.6);
@@ -313,7 +312,7 @@ h1 {
   bottom: .7vw;
   font-family: "moolireg";
   font-size: 2.5vw;
-  color: rgb(247, 162, 242);
+  color: rgba(163,240,231,0.60);
   border: outset 0.1vw grey;
   border-radius: 1vw 1vw 1vw 1vw;
   background-color: rgba(0, 0, 0, 0.7);
@@ -698,7 +697,7 @@ h1 {
   bottom: .7vw;
   font-family: "moolireg";
   font-size: 2.5vw;
-  color: rgb(247, 162, 242);
+  color: rgba(163,240,231,0.70);
   border: outset 0.1vw grey;
   border-radius: 1vw 1vw 1vw 1vw;
   background-color: rgba(0, 0, 0, 0.75);
