--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -25,10 +25,10 @@
 
                     </div>
                     <div class="div-lista">
-                        <li><a class="active" href="../index.html">Inicio</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
                         <li><a href="/templates/bienestar.html">Bienestar</a></li>
                         <li><a href="/templates/historia.html">Historia</a></li>
-                        <li><a href="/templates/contacto.html">Contacto</a></li>
+                        <li><a class="active" href="/templates/contacto.html">Contacto</a></li>
                     </div>
 
                 </ul>
