--- a/css/header.css
+++ b/css/header.css
@@ -61,10 +61,13 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgba(230,155,115,0.80);
     z-index: 2;
 }
 
+.menu ul{
+    background-color: rgba(230,155,115,0.80);
+}
+ 
 li {
     float: left;
 }
