enviar formulario al mail

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -57,7 +57,7 @@
                 Formulario de Contacto
             </h1>
 
-            <form id="formulario" onsubmit="return validarFormulario()">
+            <form action="https://formspree.io/f/xgejkgbj" method="POST" id="formulario" onsubmit="return validarFormulario()">
                 <label class="label" for="nombre">*Nombre:</label>
                 <input class="input" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"><br>
 
