icono agregado a pestaña

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/contacto.css">
-    <link rel="icon" href="../img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <title>Contacto • Seven Lives</title>
 </head>
 
